...
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarsPlaceholder" translatesAutoresizingMaskIntoConstraints="NO" id="xlN-QE-XWB">
                                                    <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                </imageView>
                                            </subviews>
                                        </view>
                                        <constraints>
                                            <constraint firstItem="xlN-QE-XWB" firstAttribute="top" secondItem="Ljo-u8-cbz" secondAttribute="top" id="UIu-Cz-XX5"/>
...
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9gd-7b-dyz">
                                                <rect key="frame" x="72.5" y="0.0" width="270.5" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.CameraLabel"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k8d-jC-3Jh">
                                        <rect key="frame" x="0.0" y="57" width="343" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="PhotoDetailViewController.SaveButton"/>
                                        <state key="normal" title="Save to Photo Library"/>
                                        <connections>
                                            <action selector="save:" destination="kgd-gk-9pr" eventType="touchUpInside" id="ROY-9I-JfD"/>
                                        </connections>
                                    </button>
                                </subviews>
...
                            <constraint firstItem="33C-GV-pNd" firstAttribute="top" secondItem="jW9-Pv-wBy" secondAttribute="bottom" id="bUE-tK-SGH"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" secondItem="33C-GV-pNd" secondAttribute="bottom" constant="226" id="fsC-Xg-4a4"/>
                            <constraint firstItem="33C-GV-pNd" firstAttribute="leading" secondItem="26Z-Jb-jmZ" secondAttribute="leading" id="ku0-go-1Ac"/>
                            <constraint firstItem="Ojm-q3-djU" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MyK-rk-mFe" secondAttribute="bottom" constant="10" id="ymg-tv-o1t"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Title" id="4ed-4v-HFq"/>
                    <connections>
                        <outlet property="cameraLabel" destination="9gd-7b-dyz" id="dG4-JQ-QmJ"/>
                        <outlet property="detailLabel" destination="PDa-7E-DHh" id="ge4-Ld-wmV"/>
                        <outlet property="imageView" destination="33C-GV-pNd" id="GKy-q9-3KS"/>
                    </connections>
                </viewController>
...
